fix(Task): fix svg icons visibility on Chrome

--- a/src/scss/CardButtons.scss
+++ b/src/scss/CardButtons.scss
@@ -62,6 +62,10 @@
     }
   }
 
+  &__svg {
+    width: 100%;
+  }
+
   @media only screen and (min-width: $media-md) {
 
     & {
